[package]
name = "http_req"
version = "0.7.2"
license = "MIT"
description = "simple and lightweight HTTP client with built-in HTTPS support"
repository = "https://github.com/jayjamesjay/http_req"
authors = ["jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request"]
edition = "2018"
exclude = [ "sgx/*", ]

[dependencies]
unicase = { git = "https://github.com/yunuseozer/unicase-sgx" }
sgx_tstd = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git", optional = true ,features = ["net", "untrusted_time"]}

[features]
default = ["rust-tls", "mesalock_sgx"]
rust-tls = ["rustls", "webpki", "webpki-roots"]
mesalock_sgx = ["sgx_tstd"]

#[dependencies.native-tls]
#version = "^0.2"
#optional = true

[dependencies.rustls]
git = "https://github.com/yunuseozer/rustls"
tag = "sgx_1.1.4"
optional = true

[dependencies.webpki]
git = "https://github.com/yunuseozer/webpki"
tag = "sgx_1.1.4"
optional = true

[dependencies.webpki-roots]
git = "https://github.com/yunuseozer/webpki-roots"
tag = "sgx_1.1.4"
optional = true

[badges]
travis-ci = { repository = "jayjamesjay/http_req"}
