[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
http_req = { path = "../../.." }
unicase = { git = "https://github.com/mesalock-linux/unicase-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "untrusted_time"] }
sgx_tunittest = {rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
